small pc adaptive

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -11,3 +11,8 @@ JWT_SECRET=
 
 # ACCESS TOKEN
 ACCESS_TOKEN_EXPIRES_IN=1h
+
+#WEB PUSH
+VAPID_PUBLIC_KEY=
+VAPID_PRIVATE_KEY=
+VAPID_SUBJECT=mailto:example@gmail.com
